# LASHiS

./: .gitignore  Dockerfile  LASHiS.sh  README.md  pyproject.toml
Experiment_Code/ADNI_code/: build_ADNI_simg.sh
Experiment_Code/ADNI_code/1_preprocessing/: pp_pbs_script.pbs  pp_pbs_script.pbs~  pp_script.sh~  pp_submission_script.sh~
Experiment_Code/ADNI_code/2_ADNI_experiment/: ADNI_LASHiS_pbs_script_2_ses.pbs  (+6 more)
Experiment_Code/R_experiments/: concatenate_raw_data_for_r.sh
Experiment_files_for_LASHiS/Data/: README.md  fullyReconciledADNI_ASHS Xs.csv  fullyReconciledADNI_LASHiS.csv  reconciled_Diet LASHiS.csv  reconciled_Freesurfer Xs.csv  stan_hippoVolumeModel.txt  subfields.csv
Experiment_files_for_LASHiS/Figures/: Dice_data_significance_matrix.tif
Experiment_files_for_LASHiS/Scripts/: ADNI_subjnames_3_ses.csv
LASHiS-V1.0/: LASHiS.sh  README.md
docs/: workflow_colored.dot  workflow_hierarchical.dot  workflow_orig.dot  workflow_orig_detailed.dot
lashis/: cli.py  config.py  deps.py  workflow.py
lashis/interfaces/: ashs.py
lashis/nodes/: chunk_sst.py  crosssectional.py  jacobian.py  jacpen.py  jlf.py  qc.py  sst.py  sst_ashs.py  stats.py
lashis/utils/: paths.py  preflight.py  validation.py
scripts/: check_lashis_progress.sh  download_tomcat_osf.py  finalize_t2w_templates.sh  preprocess_all_tomcat.sh  preprocess_t2w_runs.sh  render_workflow_graph.py  run_lashis_all_tomcat.sh  upload_tomcat_templates_osf.py  validate_volume_consistency.py
tests/: conftest.py  test_imports.py  test_smoke.py
tests/validation/: README.md  run_pipeline.sh
(+193 files in other folders)
