[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lashis"
version = "2.0.0a0"
description = "Longitudinal Automatic Segmentation of Hippocampal Subfields (Nipype workflow)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Thomas B Shaw", email = "thomasbasilshaw@gmail.com" }]
dependencies = [
    "nipype>=1.8",
    "nibabel>=5.0",
    "numpy>=1.24",
    "scipy>=1.10",   # connected-component labelling in jacpen
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
lashis = "lashis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["lashis"]

[tool.pytest.ini_options]
markers = [
    "smoke: end-to-end test on a real dataset (requires ASHS_ROOT, ASHS_ATLAS, and bundled TOMCAT data)",
]
addopts = "-m 'not smoke'"
testpaths = ["tests"]
